--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center">Nornir IoT kit app</h1>
+      <h1 class="text-center">Starter Kit App</h1>
       <div class="row">
         <div class="col-lg-4 offset-lg-4">
           <div class="row">
