Added battery life monitor. Code refactoring

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
               <label class="label">Battery</label>
               <div class="toast show battery">
                 <div class="toast-body">
-                  <p class="text-center">50%</p>
+                  <p id="battery-number" class="text-center">100</p>
                   <div class="progress">
-                    <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                    <div id="battery-progress" class="progress-bar progress-bar-striped bg-success"
+                    role="progressbar" style="width: 0%" aria-valuenow="50"
+                    aria-valuemin="0" aria-valuemax="100">
 
                     </div>
                   </div>
